// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TableRenderer /> > renders a 1x3 table 1`] = `
"
┌──────────┬──────────┬──────────┐
│ Column 1 │ Column 2 │ Column 3 │
└──────────┴──────────┴──────────┘
"
`;

exports[`<TableRenderer /> > renders a 3x1 table 1`] = `
"
┌──────────┐
│ Column 1 │
├──────────┤
│ 1        │
│ A        │
└──────────┘
"
`;

exports[`<TableRenderer /> > renders a 3x3 table 1`] = `
"
┌──────────┬────────────────────────┬──────────┐
│ Column 1 │ Column 2               │ Column 3 │
├──────────┼────────────────────────┼──────────┤
│ 1        │ 2                      │ 3        │
│ A        │ Longer than the header │ C        │
└──────────┴────────────────────────┴──────────┘
"
`;

exports[`<TableRenderer /> > renders inline Markdown 1`] = `
"
┌──────────┬──────────┬──────────┐
│ Column 1 │ Column 2 │ Column 3 │
├──────────┼──────────┼──────────┤
│ 1        │ 2        │ 3        │
└──────────┴──────────┴──────────┘
"
`;

exports[`<TableRenderer /> > truncates overflowing headers 1`] = `
"
┌────────┬────────┬───────────────────────────────────────────────────┬────────┐
│ Column │ Column │ This is a very long column header that should     │ Column │
│ 1      │ 2      │ trigger overflow.                                 │ 4      │
├────────┼────────┼───────────────────────────────────────────────────┼────────┤
│ 1      │ 2      │ 3                                                 │ 4      │
│ A      │ B      │ C                                                 │ D      │
└────────┴────────┴───────────────────────────────────────────────────┴────────┘
"
`;

exports[`<TableRenderer /> > truncates overflowing table cells 1`] = `
"
┌────────┬──────────────────────────────────────────────────┬────────┬────────┐
│ Column │ Column 2                                         │ Column │ Column │
│ 1      │                                                  │ 3      │ 4      │
├────────┼──────────────────────────────────────────────────┼────────┼────────┤
│ 1      │ This is a very long table cell that should       │ 3      │ 4      │
│        │ trigger overflow.                                │        │        │
├────────┼──────────────────────────────────────────────────┼────────┼────────┤
│ A      │ B                                                │ C      │ D      │
└────────┴──────────────────────────────────────────────────┴────────┴────────┘
"
`;
